refactored audio into separate file

--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                 "three": "https://unpkg.com/three@0.152.2/build/three.module.js",
                 "three/examples/jsm/postprocessing/EffectComposer": "https://unpkg.com/three@0.152.2/examples/jsm/postprocessing/EffectComposer.js",
                 "three/examples/jsm/postprocessing/RenderPass": "https://unpkg.com/three@0.152.2/examples/jsm/postprocessing/RenderPass.js",
-                "three/examples/jsm/postprocessing/UnrealBloomPass": "https://unpkg.com/three@0.152.2/examples/jsm/postprocessing/UnrealBloomPass.js"
+                "three/examples/jsm/postprocessing/UnrealBloomPass": "https://unpkg.com/three@0.152.2/examples/jsm/postprocessing/UnrealBloomPass.js",
+                "audio": "./audio.js"
             }
         }
     </script>
